# helix_data_engineering_take_home_assessment

./: .gitignore  Makefile  README.md  pyproject.toml
dags/: helix_pipeline.py
docs/: LINEAGE.md
docs/superpowers/plans/: 2026-06-27-helix-data-pipeline.md
docs/superpowers/specs/: 2026-06-27-helix-data-pipeline-design.md
src/: definitions.py
src/assets/: modeled.py  raw.py  staging.py
src/checks/: quality_checks.py
src/resources/: duckdb.py
src/tasks/: modeled.py  quality_checks.py  raw.py  staging.py
src/utils/: cleaning.py  logging.py
tests/: test_assets_modeled.py  test_assets_raw.py  test_assets_staging.py  test_cleaning.py  test_e2e.py  test_quality_checks.py
tests/fixtures/: loans.csv  payments_sample.jsonl
